force-app/main/default/objects/Credit_Policy__c/Credit_Policy__c.object-meta.xml
<CustomObject>
    <label>Credit Policy</label>
    <nameField>
        <label>Credit Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Policy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>