force-app/main/default/objects/Credit_Policy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Policy</relationshipLabel>
    <relationshipName>Credit_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>