force-app/main/default/objects/Credit_Policy__c/fields/Adverse_Actions__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Actions__c</fullName>
    <label>Adverse Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>