force-app/main/default/objects/Credit_Policy__c/fields/Age_Oldest_Crc_mo__c.field-meta.xml
<CustomField>
    <fullName>Age_Oldest_Crc_mo__c</fullName>
    <label>Age Oldest Crc #mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>