force-app/main/default/objects/Credit_Policy__c/fields/Agg_utilization_12mo__c.field-meta.xml
<CustomField>
    <fullName>Agg_utilization_12mo__c</fullName>
    <label>Agg. utilization 12mo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>