force-app/main/default/objects/Credit_Policy__c/fields/AlternativeRiskScore__c.field-meta.xml
<CustomField>
    <fullName>AlternativeRiskScore__c</fullName>
    <label>AlternativeRiskScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>