force-app/main/default/objects/Credit_Policy__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Credit Policy</relationshipLabel>
    <relationshipName>Credit_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>