force-app/main/default/objects/Credit_Policy__c/fields/Auto_Loan_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan_Monthly_Payments__c</fullName>
    <label>Auto Loan Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>