force-app/main/default/objects/Credit_Policy__c/fields/Auto_Loan_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan_Total_Count__c</fullName>
    <label>Auto Loan Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>