force-app/main/default/objects/Credit_Policy__c/fields/Bal_Increases_3mo__c.field-meta.xml
<CustomField>
    <fullName>Bal_Increases_3mo__c</fullName>
    <label>#Bal Increases 3mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>