force-app/main/default/objects/Credit_Policy__c/fields/Bureau_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Inquiry_Date__c</fullName>
    <label>Bureau Inquiry Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>