force-app/main/default/objects/Credit_Policy__c/fields/bureau_subset__c.field-meta.xml
<CustomField>
    <fullName>bureau_subset__c</fullName>
    <label>bureau subset</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>