force-app/main/default/objects/Credit_Policy__c/fields/Consumer_Statement_Text__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Statement_Text__c</fullName>
    <label>Consumer Statement Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>