force-app/main/default/objects/Credit_Policy__c/fields/Consumer_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Statement_Type__c</fullName>
    <label>Consumer Statement Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>