force-app/main/default/objects/Credit_Policy__c/fields/Consumer_status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Consumer_status_Indicator__c</fullName>
    <label>Consumer status Indicator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>