force-app/main/default/objects/Credit_Policy__c/fields/Credit_Card_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Monthly_Payments__c</fullName>
    <label>Credit Card Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>