force-app/main/default/objects/Credit_Policy__c/fields/Credit_Card_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Total_Count__c</fullName>
    <label>Credit Card Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>