force-app/main/default/objects/Credit_Policy__c/fields/Credit_Card_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Utilization__c</fullName>
    <label>Credit Card Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>