force-app/main/default/objects/Credit_Policy__c/fields/Credit_Cards_Closed_with_Balance_Count__c.field-meta.xml
<CustomField>
    <fullName>Credit_Cards_Closed_with_Balance_Count__c</fullName>
    <label>Credit Cards Closed with Balance Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>