force-app/main/default/objects/Credit_Policy__c/fields/Credit_Policy_Verification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Credit_Policy_Verification_Flag__c</fullName>
    <label>Credit Policy Verification Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>