force-app/main/default/objects/Credit_Policy__c/fields/Credit_Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Credit_Policy_Version__c</fullName>
    <label>Credit Policy Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>