force-app/main/default/objects/Credit_Policy__c/fields/Days_since_unsec_install_loan__c.field-meta.xml
<CustomField>
    <fullName>Days_since_unsec_install_loan__c</fullName>
    <label>Days since unsec install loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>