force-app/main/default/objects/Credit_Policy__c/fields/Days_Since_unsec_install_loan_inq__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_unsec_install_loan_inq__c</fullName>
    <label>Days Since unsec install loan inq</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>