force-app/main/default/objects/Credit_Policy__c/fields/Debt_to_Income_DTI__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Income_DTI__c</fullName>
    <label>Debt to Income (DTI)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>