force-app/main/default/objects/Credit_Policy__c/fields/Deduped_inq_6mo__c.field-meta.xml
<CustomField>
    <fullName>Deduped_inq_6mo__c</fullName>
    <label>#Deduped inq 6mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>