force-app/main/default/objects/Credit_Policy__c/fields/Federal_tax__c.field-meta.xml
<CustomField>
    <fullName>Federal_tax__c</fullName>
    <label>Federal tax payment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>