force-app/main/default/objects/Credit_Policy__c/fields/final_decision__c.field-meta.xml
<CustomField>
    <fullName>final_decision__c</fullName>
    <label>final decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>