force-app/main/default/objects/Credit_Policy__c/fields/Hard_Inquiry_Meta_Data_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Inquiry_Meta_Data_Inquiry_Date__c</fullName>
    <label>Hard Inquiry Meta Data Inquiry Date</label>
    <length>200</length>
    <type>Text</type>
</CustomField>