force-app/main/default/objects/Credit_Policy__c/fields/HELOC_Balance__c.field-meta.xml
<CustomField>
    <fullName>HELOC_Balance__c</fullName>
    <label>HELOC Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>