force-app/main/default/objects/Credit_Policy__c/fields/HELOC_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>HELOC_Monthly_Payments__c</fullName>
    <label>HELOC Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>