force-app/main/default/objects/Credit_Policy__c/fields/HELOC_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>HELOC_Total_Count__c</fullName>
    <label>HELOC Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>