force-app/main/default/objects/Credit_Policy__c/fields/Inquiries_Last_6_Mo__c.field-meta.xml
<CustomField>
    <fullName>Inquiries_Last_6_Mo__c</fullName>
    <label>Inquiries Last 6 Mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>