force-app/main/default/objects/Credit_Policy__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <formula>Application__r.Lead_ID__c</formula>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>