force-app/main/default/objects/Credit_Policy__c/fields/Loan_amount_counteroffer__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount_counteroffer__c</fullName>
    <label>Loan amount counteroffer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>