force-app/main/default/objects/Credit_Policy__c/fields/Max_util_of_install_loan__c.field-meta.xml
<CustomField>
    <fullName>Max_util_of_install_loan__c</fullName>
    <label>Max util of install loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>