force-app/main/default/objects/Credit_Policy__c/fields/Monthly_DTI__c.field-meta.xml
<CustomField>
    <fullName>Monthly_DTI__c</fullName>
    <description>Monthly Debt-to-income value sent in credit policy call</description>
    <label>Monthly_DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>