force-app/main/default/objects/Credit_Policy__c/fields/Months_Since_Oldest_Trade__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Oldest_Trade__c</fullName>
    <label>Months Since Oldest Trade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>