force-app/main/default/objects/Credit_Policy__c/fields/Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Balance__c</fullName>
    <label>Mortgage Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>