force-app/main/default/objects/Credit_Policy__c/fields/Mortgage_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Monthly_Payments__c</fullName>
    <label>Mortgage Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>