force-app/main/default/objects/Credit_Policy__c/fields/MosSinceDerog__c.field-meta.xml
<CustomField>
    <fullName>MosSinceDerog__c</fullName>
    <label>MosSinceDerog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>