force-app/main/default/objects/Credit_Policy__c/fields/Net_Disposable_Income_NDI__c.field-meta.xml
<CustomField>
    <fullName>Net_Disposable_Income_NDI__c</fullName>
    <label>Net Disposable Income (NDI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>