force-app/main/default/objects/Credit_Policy__c/fields/Net_Disposable_Income_NDI_Num__c.field-meta.xml
<CustomField>
    <fullName>Net_Disposable_Income_NDI_Num__c</fullName>
    <formula>IF(Net_Disposable_Income_NDI__c = Null, 0, VALUE( Net_Disposable_Income_NDI__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Disposable Income NDI Num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>