force-app/main/default/objects/Credit_Policy__c/fields/Non_med_Col_0__c.field-meta.xml
<CustomField>
    <fullName>Non_med_Col_0__c</fullName>
    <label>#Non-med Col &gt; $0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>