force-app/main/default/objects/Credit_Policy__c/fields/Num_Trades_Opened_Past_24mo__c.field-meta.xml
<CustomField>
    <fullName>Num_Trades_Opened_Past_24mo__c</fullName>
    <label>Num Trades Opened Past 24mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>