force-app/main/default/objects/Credit_Policy__c/fields/Open_Fin_Inst_Trades__c.field-meta.xml
<CustomField>
    <fullName>Open_Fin_Inst_Trades__c</fullName>
    <label>#Open Fin Inst Trades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>