force-app/main/default/objects/Credit_Policy__c/fields/Pricing_test_bucket__c.field-meta.xml
<CustomField>
    <fullName>Pricing_test_bucket__c</fullName>
    <label>Pricing test bucket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>