force-app/main/default/objects/Credit_Policy__c/fields/Raw_XML__c.field-meta.xml
<CustomField>
    <fullName>Raw_XML__c</fullName>
    <label>Raw XML</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>