force-app/main/default/objects/Credit_Policy__c/fields/Recent_Charge_off_mo__c.field-meta.xml
<CustomField>
    <fullName>Recent_Charge_off_mo__c</fullName>
    <label>Recent Charge off #mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>