force-app/main/default/objects/Credit_Policy__c/fields/request_intent__c.field-meta.xml
<CustomField>
    <fullName>request_intent__c</fullName>
    <description>intent of the credit poilcy transmission as defined within credit policy call</description>
    <label>request intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>