force-app/main/default/objects/Credit_Policy__c/fields/Rev_75_12months__c.field-meta.xml
<CustomField>
    <fullName>Rev_75_12months__c</fullName>
    <label>%Rev&gt;75% 12months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>