force-app/main/default/objects/Credit_Policy__c/fields/Rev_Inc_3mo__c.field-meta.xml
<CustomField>
    <fullName>Rev_Inc_3mo__c</fullName>
    <label>Rev Inc. 3mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>