force-app/main/default/objects/Credit_Policy__c/fields/Revolving_Actual_Min_payment_1mo__c.field-meta.xml
<CustomField>
    <fullName>Revolving_Actual_Min_payment_1mo__c</fullName>
    <label>Revolving Actual/Min payment 1mo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>