force-app/main/default/objects/Credit_Policy__c/fields/Risk_Model_Source__c.field-meta.xml
<CustomField>
    <fullName>Risk_Model_Source__c</fullName>
    <label>Risk Model Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>