force-app/main/default/objects/Credit_Policy__c/fields/Satisfactory_Trades_All_Trades__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Trades_All_Trades__c</fullName>
    <label>Satisfactory Trades / All Trades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>