force-app/main/default/objects/Credit_Policy__c/fields/Score_Factors__c.field-meta.xml
<CustomField>
    <fullName>Score_Factors__c</fullName>
    <label>Score Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>