force-app/main/default/objects/Credit_Policy__c/fields/state_tax_payment__c.field-meta.xml
<CustomField>
    <fullName>state_tax_payment__c</fullName>
    <label>state tax payment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>