force-app/main/default/objects/Credit_Policy__c/fields/Student_Loan_Count__c.field-meta.xml
<CustomField>
    <fullName>Student_Loan_Count__c</fullName>
    <label>Student Loan Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>