force-app/main/default/objects/Credit_Policy__c/fields/Student_Loan_Deferred_Count__c.field-meta.xml
<CustomField>
    <fullName>Student_Loan_Deferred_Count__c</fullName>
    <label>Student Loan Deferred Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>