force-app/main/default/objects/Credit_Policy__c/fields/Tax_Liens__c.field-meta.xml
<CustomField>
    <fullName>Tax_Liens__c</fullName>
    <label>Tax Liens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>