force-app/main/default/objects/Credit_Policy__c/fields/Total_Open_Trades__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Trades__c</fullName>
    <label>Total Open Trades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>