force-app/main/default/objects/Credit_Policy__c/fields/Tradeline_non_mortgage_trade_monthly_pay__c.field-meta.xml
<CustomField>
    <fullName>Tradeline_non_mortgage_trade_monthly_pay__c</fullName>
    <description>tradeline_non_mortgage_trades_monthly_payment</description>
    <label>Tradeline non mortgage trade mnthly pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>