force-app/main/default/objects/Credit_Policy__c/fields/Tradeline_revolving_trades_balance__c.field-meta.xml
<CustomField>
    <fullName>Tradeline_revolving_trades_balance__c</fullName>
    <description>tradeline_revolving_trades_balance</description>
    <label>Tradeline revolving trades balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>