force-app/main/default/objects/Credit_Policy__c/fields/Tradeline_unsecured_installment_loan_bal__c.field-meta.xml
<CustomField>
    <fullName>Tradeline_unsecured_installment_loan_bal__c</fullName>
    <description>tradeline_unsecured_installment_loans_balance</description>
    <label>Tradeline unsecured installment loan bal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>