force-app/main/default/objects/Credit_Policy__c/fields/trades_90_Day_Delinq_in_last_12_mos__c.field-meta.xml
<CustomField>
    <fullName>trades_90_Day_Delinq_in_last_12_mos__c</fullName>
    <label>90+ Day Delinq in last 12 mos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>