force-app/main/default/objects/Credit_Policy__c/fields/Trades_open_last_24_mos_All_Trades__c.field-meta.xml
<CustomField>
    <fullName>Trades_open_last_24_mos_All_Trades__c</fullName>
    <label>Trades open last 24 mos / All Trades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>