force-app/main/default/objects/Credit_Policy__c/fields/Unsecured_Installment_Loans_Balance__c.field-meta.xml
<CustomField>
    <fullName>Unsecured_Installment_Loans_Balance__c</fullName>
    <label>Unsecured Installment Loans Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>