force-app/main/default/objects/Credit_Policy__c/fields/X30_Delinq_6months__c.field-meta.xml
<CustomField>
    <fullName>X30_Delinq_6months__c</fullName>
    <label>#30+ Delinq 6months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>