force-app/main/default/objects/Credit_Policy__c/listViews/individual.listView-meta.xml
<ListView>
    <fullName>individual</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>final_decision__c</columns>
    <columns>Monthly_DTI__c</columns>
    <columns>Debt_to_Income_DTI__c</columns>
    <columns>Net_Disposable_Income_NDI__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>request_intent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>APP-0001643123</value>
    </filters>
    <label>individual</label>
</ListView>